--- a/resources/styles/userInfo.css
+++ b/resources/styles/userInfo.css
@@ -1,29 +1,29 @@
 body {
-    background: rgb(99, 39, 120)
+    background: #020247
 }
 
 .form-control:focus {
     box-shadow: none;
-    border-color: #BA68C8
+    border-color: #3131df
 }
 
 .profile-button {
-    background: rgb(99, 39, 120);
+    background: #002db3;
     box-shadow: none;
     border: none
 }
 
 .profile-button:hover {
-    background: #682773
+    background: #3131df
 }
 
 .profile-button:focus {
-    background: #682773;
+    background: #3131df;
     box-shadow: none
 }
 
 .profile-button:active {
-    background: #682773;
+    background: #3131df;
     box-shadow: none
 }
 
@@ -37,8 +37,8 @@ body {
 }
 
 .add-experience:hover {
-    background: #BA68C8;
-    color: #fff;
+    background: #809fff;
+    color: #bfcfff;
     cursor: pointer;
-    border: solid 1px #BA68C8
+    border: solid 1px #7ea3de
 }
