--- a/resources/styles/userInfo.css
+++ b/resources/styles/userInfo.css
@@ -2,6 +2,11 @@ body {
     background: #020247
 }
 
+#invisibleDiv{
+    color: #020247;
+    height: 100px;
+}
+
 .form-control:focus {
     box-shadow: none;
     border-color: #3131df
