--- a/resources/styles/userInfo.css
+++ b/resources/styles/userInfo.css
@@ -2,7 +2,7 @@ body {
     background: #020247
 }
 
-#invisibleDiv{
+#invisibleDiv {
     color: #020247;
     height: 100px;
 }
@@ -48,32 +48,36 @@ body {
     border: solid 1px #7ea3de
 }
 
-.square-box-reservation{
+.square-box-reservation {
     position: relative;
     width: 100%;
     overflow: hidden;
     background: white;
     border: lightgray;
-    border-style:solid
+    border-style: solid
 }
-.square-box-reservation:before{
+
+.square-box-reservation:before {
     content: "";
     display: block;
     padding-top: 100%;
 }
-.square-content-reservation{
-    position:  absolute;
+
+.square-content-reservation {
+    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     color: black;
 }
+
 .square-content-reservation div {
-   display: table;
-   width: 100%;
-   height: 100%;
+    display: table;
+    width: 100%;
+    height: 100%;
 }
+
 .square-content-reservation span {
     display: table-cell;
     text-align: center;
@@ -81,18 +85,18 @@ body {
     color: black
 }
 
-select{
+select {
     width: 100%;
 }
 
-.panel{
+.panel {
     background-color: white;
     transition: background-color 2s;
 }
 
-.email{
+.email {
     background-color: white;
-    color:rgba(0,0,0,.5);
+    color: rgba(0, 0, 0, .5);
     transition: background-color 2s;
 }
 
@@ -101,4 +105,4 @@ select{
     background-color: black;
     color: white;
     transition: background-color 2s;
-  }
+}
