--- a/resources/styles/news.css
+++ b/resources/styles/news.css
@@ -47,13 +47,14 @@ h1, h2, h3, h4{
 #img{
     width: 25%;
     max-width: 250px;
-    float: left;    
-    margin: 0 15px 0 0;
+    float: left; 
+    margin: 0px 15px 0px 0px;
+    display: block;
 }
 
 
 #textP{
-    padding-bottom: 50px;
+    padding-bottom: 5%;
     padding-top: 50px;
     padding-right: 20px;
 }
