--- a/features/home/css/templatemo-ocean-vibes.css
+++ b/features/home/css/templatemo-ocean-vibes.css
@@ -119,18 +119,18 @@ a {
     height: 200px;
     padding: 30px;
     border: 1px solid #D2D3D4;
-    color: #999; 
+    color: rgba(0, 0, 0, .5); 
     box-sizing: border-box;
 }
 
 .tm-nav-link:hover,
 .tm-nav-link.active {
-    color: #309AFD;
+    color: #002db3;
 }
 
 .tm-nav-link i {
     margin-top: 30px;
-    color: #309AFD;
+    color: #002db3;
 }
 
 .tm-main-nav ul {
