--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -90,7 +90,7 @@ a.active {
 #tm-video-container {
     max-height: 400px;
     overflow: hidden;
-    background-color: #333;
+    background-color: #bfcfff;
     margin-bottom: 90px;
     position: relative;
 }
@@ -157,7 +157,7 @@ a.active {
     width: 200px;
     height: 200px;
     padding: 30px;
-    border: 1px solid #D2D3D4;
+    border: 1px solid rgba(0, 0, 0, .5);
     color: rgba(0, 0, 0, .5);
     box-sizing: border-box;
 }
