--- a/resources/styles/login.css
+++ b/resources/styles/login.css
@@ -86,6 +86,16 @@ body {
     height: 100%;
 }
 
+.formRegister {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
+}
+
 .container input {
     background-color: #eee;
     border: none;
