--- a/resources/styles/news.css
+++ b/resources/styles/news.css
@@ -1,70 +1,154 @@
-body{
-    background-color: whitesmoke;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@500&display=swap");
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-p{
-    color: black;
-    font-size: 18px;
-    text-align: justify;
+:root {
+    --primary-text-color: #183b56;
+    --secondary-text-color: #577592;
+    --accent-color: #2294ed;
+    --accent-color-dark: #1d69a3;
 }
 
-h1, h2, h3, h4{
-    text-align: center;
+body {
+    font-family: "Poppins", sans-serif;
+    color: var(--primary-text-color);
 }
 
-#specialP{
-    color: #020247;
-    font-size: 17px;
-    font-weight: bold;
+p {
+    font-family: "Roboto", sans-serif;
+    color: var(--secondary-text-color);
+    line-height: 1.4rem;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    background: rgb(128,159,255);
-    background: radial-gradient(circle, rgba(128,159,255,0.8) 28%, rgba(126,163,222,0.8) 64%, rgba(191,207,255,0.8) 87%);
-    padding: 10px;
-    border-radius: 5px;
-  }
- div {
-    background-color: whitesmoke;
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 0px;
-    font-size: 18px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+.container {
+    max-width: 1180px;
+    margin-inline: auto;
+    overflow: hidden;
+}
+
+nav {
+    background-color: #f3faff;
+    box-shadow: 0 0 4px #bbd0e2;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    left: 0;
+    right: 0;
+}
+
+.main-nav {
+    justify-content: space-between;
+    padding-block: 8px;
+}
+
+.company-logo img {
+    width: 60px;
+}
+
+.nav-links ul {
+    gap: 16px;
+}
+
+.hover-link {
+    cursor: pointer;
+}
+
+.hover-link:hover {
+    color: var(--secondary-text-color);
+}
+
+.hover-link:active {
+    color: red;
+}
+
+.nav-item.active {
+    color: var(--accent-color);
+}
+
+.search-bar {
+    height: 32px;
+    gap: 8px;
+}
+
+.news-input {
+    width: 200px;
+    height: 100%;
+    padding-inline: 12px;
+    border-radius: 4px;
+    border: 2px solid #bbd0e2;
+    font-family: "Roboto", sans-serif;
+}
+
+.search-button {
+    background-color: var(--accent-color);
+    color: white;
+    padding: 8px 24px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+}
+
+.search-button:hover {
+    background-color: var(--accent-color-dark);
+}
+
+main {
+    padding-block: 20px;
+    margin-top: 80px;
+}
+
+.cards-container {
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    align-items: start;
+}
+
+.card {
+    width: 360px;
+    min-height: 400px;
+    box-shadow: 0 0 4px #d4ecff;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #fff;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.card:hover {
+    box-shadow: 1px 1px 8px #d4ecff;
+    background-color: #f9fdff;
+    transform: translateY(-2px);
+}
+
+.card-header img {
     width: 100%;
-  }
-
-#titleP{
-    color: #020247;
-    font-size: 17px;
-    font-weight: bold;
-    text-align: center;
+    height: 180px;
+    object-fit: cover;
 }
 
-#img{
-    width: 25%;
-    max-width: 250px;
-    float: left; 
-    margin: 0px 15px 0px 0px;
-    display: block;
+.card-content {
+    padding: 12px;
 }
 
-
-#textP{
-    padding-bottom: 5%;
-    padding-top: 50px;
-    padding-right: 20px;
-}
-
-#invisibleDiv{
-    border: 1px solid rgba(255, 255, 255, 0.0);
-    padding: 0px;
-    font-size: 18px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+.news-source {
+    margin-block: 12px;
 }
